Punto1/ComplejosParser.py
# Generated from Complejos.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ComplejosParser ( Parser ):

    grammarFileName = "Complejos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "REAL_SIGNED", 
                      "REAL", "IMAG_PART", "WS" ]

    RULE_expr = 0
    RULE_complex_expr = 1
    RULE_complex_term = 2
    RULE_complex_factor = 3
    RULE_complex_number = 4

    ruleNames =  [ "expr", "complex_expr", "complex_term", "complex_factor", 
                   "complex_number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    REAL_SIGNED=7
    REAL=8
    IMAG_PART=9
    WS=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complex_expr(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_exprContext,0)


        def EOF(self):
            return self.getToken(ComplejosParser.EOF, 0)

        def getRuleIndex(self):
            return ComplejosParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = ComplejosParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.complex_expr(0)
            self.state = 11
            self.match(ComplejosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ComplejosParser.RULE_complex_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddSubExprContext(Complex_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complex_expr(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_exprContext,0)

        def complex_term(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_termContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSubExpr" ):
                listener.enterAddSubExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSubExpr" ):
                listener.exitAddSubExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSubExpr" ):
                return visitor.visitAddSubExpr(self)
            else:
                return visitor.visitChildren(self)


    class SingleTermExprContext(Complex_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complex_term(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_termContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleTermExpr" ):
                listener.enterSingleTermExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleTermExpr" ):
                listener.exitSingleTermExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleTermExpr" ):
                return visitor.visitSingleTermExpr(self)
            else:
                return visitor.visitChildren(self)



    def complex_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ComplejosParser.Complex_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_complex_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ComplejosParser.SingleTermExprContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 14
            self.complex_term(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 21
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ComplejosParser.AddSubExprContext(self, ComplejosParser.Complex_exprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_complex_expr)
                    self.state = 16
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 17
                    _la = self._input.LA(1)
                    if not(_la==1 or _la==2):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 18
                    self.complex_term(0) 
                self.state = 23
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Complex_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ComplejosParser.RULE_complex_term

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SingleFactorExprContext(Complex_termContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complex_factor(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_factorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleFactorExpr" ):
                listener.enterSingleFactorExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleFactorExpr" ):
                listener.exitSingleFactorExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleFactorExpr" ):
                return visitor.visitSingleFactorExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulDivExprContext(Complex_termContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complex_term(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_termContext,0)

        def complex_factor(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_factorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivExpr" ):
                listener.enterMulDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivExpr" ):
                listener.exitMulDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivExpr" ):
                return visitor.visitMulDivExpr(self)
            else:
                return visitor.visitChildren(self)



    def complex_term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ComplejosParser.Complex_termContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_complex_term, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = ComplejosParser.SingleFactorExprContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 25
            self.complex_factor()
            self._ctx.stop = self._input.LT(-1)
            self.state = 32
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ComplejosParser.MulDivExprContext(self, ComplejosParser.Complex_termContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_complex_term)
                    self.state = 27
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 28
                    _la = self._input.LA(1)
                    if not(_la==3 or _la==4):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 29
                    self.complex_factor() 
                self.state = 34
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Complex_factorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ComplejosParser.RULE_complex_factor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ComplexNumExprContext(Complex_factorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_factorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complex_number(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_numberContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplexNumExpr" ):
                listener.enterComplexNumExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplexNumExpr" ):
                listener.exitComplexNumExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplexNumExpr" ):
                return visitor.visitComplexNumExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(Complex_factorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_factorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def complex_expr(self):
            return self.getTypedRuleContext(ComplejosParser.Complex_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenExpr" ):
                listener.enterParenExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenExpr" ):
                listener.exitParenExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)



    def complex_factor(self):

        localctx = ComplejosParser.Complex_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_complex_factor)
        try:
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = ComplejosParser.ParenExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(ComplejosParser.T__4)
                self.state = 36
                self.complex_expr(0)
                self.state = 37
                self.match(ComplejosParser.T__5)
                pass
            elif token in [7, 9]:
                localctx = ComplejosParser.ComplexNumExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.complex_number()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_numberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ComplejosParser.RULE_complex_number

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RealOnlyContext(Complex_numberContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_numberContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REAL_SIGNED(self):
            return self.getToken(ComplejosParser.REAL_SIGNED, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRealOnly" ):
                listener.enterRealOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRealOnly" ):
                listener.exitRealOnly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRealOnly" ):
                return visitor.visitRealOnly(self)
            else:
                return visitor.visitChildren(self)


    class ComplexFullContext(Complex_numberContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_numberContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REAL_SIGNED(self):
            return self.getToken(ComplejosParser.REAL_SIGNED, 0)
        def IMAG_PART(self):
            return self.getToken(ComplejosParser.IMAG_PART, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplexFull" ):
                listener.enterComplexFull(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplexFull" ):
                listener.exitComplexFull(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplexFull" ):
                return visitor.visitComplexFull(self)
            else:
                return visitor.visitChildren(self)


    class ImagOnlyContext(Complex_numberContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ComplejosParser.Complex_numberContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IMAG_PART(self):
            return self.getToken(ComplejosParser.IMAG_PART, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImagOnly" ):
                listener.enterImagOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImagOnly" ):
                listener.exitImagOnly(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImagOnly" ):
                return visitor.visitImagOnly(self)
            else:
                return visitor.visitChildren(self)



    def complex_number(self):

        localctx = ComplejosParser.Complex_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_complex_number)
        self._la = 0 # Token type
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = ComplejosParser.ComplexFullContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(ComplejosParser.REAL_SIGNED)
                self.state = 43
                _la = self._input.LA(1)
                if not(_la==1 or _la==2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 44
                self.match(ComplejosParser.IMAG_PART)
                pass

            elif la_ == 2:
                localctx = ComplejosParser.RealOnlyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(ComplejosParser.REAL_SIGNED)
                pass

            elif la_ == 3:
                localctx = ComplejosParser.ImagOnlyContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.match(ComplejosParser.IMAG_PART)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.complex_expr_sempred
        self._predicates[2] = self.complex_term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def complex_expr_sempred(self, localctx:Complex_exprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def complex_term_sempred(self, localctx:Complex_termContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




